--- a/EX.2
+++ b/EX.2
@@ -1,6 +1,6 @@
-n=20
+i = 20  
 
-while n >=1:
-    if n %2==0:
-        print(n)
-    n=1
+while i >= 1:  
+  if i % 2 == 0:  
+    print(i)  
+  i -= 1  
